bundle/config/02-namespaces.yaml
#@ load("@ytt:data", "data")

#@ if not data.values.applicationNamespace.exists:
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.applicationNamespace.name
#@ end
